data/all_generated_tests/raw_wast_tests/loop_StackCorruption_351.wast
;; 2. **Test with `br_if` to Conditional Loop Termination**:    - Create a loop with a conditional branch (`br_if`) that exits the loop based on a comparison. Verify stack consistency after loop exit.    - **Constraint**: Proper handling of stack state when a conditional branch is taken.    - **Relation to Stack Corruption**: Incorrect conditional branch handling might leave the stack in an inconsistent state.

(assert_invalid
  (module
    (func $conditional_loop
      (local i32)
      (block
        (loop (result i32)
          (local.get 0)
          (i32.const 1)
          (i32.add)
          (local.tee 0)
          (i32.const 10)
          (i32.ge_s)
          (br_if 1)
        )
        (local.get 0)
        (i32.const 0)
        (i32.eq)
      )
      (if (then (nop)))
    )
  )
  "type mismatch"
)